# pybind_cpp_w_python_example

./: MODULE.bazel  READDME.md  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-pybind_cpp_w_python_example  bazel-testlogs
cc/: BUILD  BUILD.bazel  main.cpp
cc_lib/: BUILD.bazel  matplotlibcpp.h  test_matplotlib.cpp
embedded_py/: embedded_py.bzl
python/: BUILD  BUILD.bazel  np_wrapper.py  requirements.in  requirements_lock.txt
python/my_lib/: BUILD.bazel  py_module.py
