###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

## MODULE.bazel
module(
    name = "my_test",
    repo_name = "my_test_repo",
)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

bazel_dep(name = "pybind11_bazel", version = "2.12.0")

python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_pip",
    python_version = "3.11",
    requirements_lock = "//python:requirements_lock.txt",
    requirements_windows = "//python:requirements_windows.txt",
)
use_repo(pip, "my_pip")
